# srcwrwasm

./: Cargo.toml  Makefile.toml
.cargo/: config.toml
.github/workflows/: build-everything.yml
sample/: Cargo.toml  build.rs
sample/src/: lib.rs  natives_sample.cpp  natives_sample.rs  rust_exports_sample.h
srcwrtimer/addons/sourcemod/scripting/: sample.sp  srcwr-wasm.sp
srcwrtimer/addons/sourcemod/scripting/include/: sample.inc
srcwrtimer/addons/sourcemod/scripting/include/srcwr/: wasm.inc
srcwrwasm/: Cargo.toml
srcwrwasm/src/: lib.rs  natives_wasm.cpp  natives_wasm.rs  rust_exports_wasm.h
wasi-example/: Cargo.toml
wasi-example/src/: main.rs
