[workspace]
resolver = "2"

members = [
	"srcwrwasm",
	"wasi-example",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
homepage = "https://github.com/srcwr/srcwrwasm"
repository = "https://github.com/srcwr/srcwrwasm"

[workspace.dependencies]
extshared = { path = "../srcwrtimer/extshared" }
extshared_build_helper = { path = "../srcwrtimer/extshared_build_helper" }

[profile.release]
lto = true
incremental = false
