[package]
name = "srcwrwasm"
authors = ["rtldg <rtldg@protonmail.com>"]
description = "WEBASSEMBLY!"
license = "GPL-3.0-or-later"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[build-dependencies]
extshared_build_helper.workspace = true

[dependencies]
anyhow = "1"
extshared.workspace = true
mimalloc = { version = "*", default-features = false }
wasmtime = "30.0.2"
wasmtime-wasi = "30.0.2"
