cargo-features = ["per-package-target"]

[package]
name = "wasi-example"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
# https://doc.rust-lang.org/cargo/reference/unstable.html#per-package-target
forced-target = "wasm32-wasip2"

[dependencies]


